go-web-app-chart/templates/deployment.yml
apiVersion: app/v1
kind: Deployment
metadata: 
  name: go-web-app
  labels:
    app: go-web-app
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec: 
      containers:
        - name: go-web-app
          image: gowdaamith/go-web-app:v1
          ports:
            - containerPort: 8080
