go-web-app-chart/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
    name: go-web-app
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  ingressClassName: nginx
  rules:
  - host: go-web-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          sevice:
            name: go-web-app
            port: 
              number: 80
